get near v1.1
